--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "body-parser": "~1.15.2",
     "cookie-parser": "~1.4.3",
     "core-js": "^2.4.1",
+    "cors": "^2.8.3",
     "debug": "~2.2.0",
     "express": "~4.14.0",
     "hjs": "~0.0.6",
+    "mongodb": "^2.2.26",
+    "mongojs": "^2.4.0",
     "morgan": "~1.7.0",
     "nodemon": "^1.11.0",
     "rxjs": "^5.1.0",
